阳明-从 Docker 到 Kubernetes 进阶/01code/75Gitlab CI 的基本使用/gitlab-ci-k8s-demo/manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab-k8s-demo-__CI_ENVIRONMENT_SLUG__
  namespace: gitlab
  labels:
    app: gitlab-k8s-demo
    ref: __CI_ENVIRONMENT_SLUG__
    track: stable
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gitlab-k8s-demo
      ref: __CI_ENVIRONMENT_SLUG__
  template:
    metadata:
      labels:
        app: gitlab-k8s-demo
        ref: __CI_ENVIRONMENT_SLUG__
        track: stable
    spec:
      # 注意:如果使用的是私有仓库镜像,就要创建一个 secret, 让后配置到 imagePullSecrets
      # 这里并不是使用的私有仓库镜像,使用的是 docker hub, 所以不用配置 imagePullSecrets
      #imagePullSecrets:
      #  - name: myregistry
      containers:
      - name: app
        image: st22ab889/gitlab-ci-demo:__VERSION__
        imagePullPolicy: Always
        ports:
        - name: http-metrics
          protocol: TCP
          containerPort: 8000
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 3
          timeoutSeconds: 2
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 3
          timeoutSeconds: 2
